--- a/news.html
+++ b/news.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>传智教育</title>
+  <title>新加的文件</title>
 </head>
 <body>
-  <p>改变了内容</p>
+  <p>123</p>
 </body>
 </html>
